Changed text aligning on page tiles and fixed text alignment on contact page

--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -16,7 +16,6 @@
 @include mediaMd {
 	main {
 		align-items: center;
-		text-align: center;
 
 		.lg-heading {
 			line-height: 1;
