--- a/scss/main.scss
+++ b/scss/main.scss
@@ -224,6 +224,11 @@ main {
 				}
 			}
 
+			.text-secondary {
+				text-align: center;
+				justify-content: center;
+			}
+
 			.btn-copy {
 				display: inline-block;
 				background: none;
